After switching PLMNs, mmcli output is not updated
- After starting ModemManager, the PLMN is correctly reported:
$ mmcli -m 0 -K | grep modem.3gpp.operator-code
modem.3gpp.operator-code : 22601
- Next I change operator:
$ mmcli -m 0 -K --3gpp-register-in-operator=22610
successfully registered the modem
- But now mmcli keeps on reporting the old operator:
$ mmcli -m 0 -K | grep modem.3gpp.operator-code
modem.3gpp.operator-code : 22601
The operator did get changed, though:
$ echo $'AT+COPS?\r' > /dev/ttyUSB0
$ journalctl -n1 -o cat -u ModemManager
<debug> (ttyUSB0): <-- '<CR><LF>+COPS: 1,2,"22610",7<CR><LF><CR><LF>OK<CR><LF>'
Full debug log from step 2:
<debug> Launching manual network registration (22610)...
[/dev/cdc-wdm0] Sent message...
<<<<<< RAW:
<<<<<< length = 76
<<<<<< data = 03:00:00:00:4C:00:00:00:1B:00:00:00:01:00:00:00:00:00:00:00:A2:89:CC:33:BC:BB:8B:4F:B6:B0:13:3E:C2:AA:E6:DF:09:00:00:00:01:00:00:00:1C:00:00:00:10:00:00:00:0A:00:00:00:01:00:00:00:00:00:00:00:32:00:32:00:36:00:31:00:30:00:00:00
[/dev/cdc-wdm0] Sent message (translated)...
<<<<<< Header:
<<<<<< length = 76
<<<<<< type = command (0x00000003)
<<<<<< transaction = 27
<<<<<< Fragment header:
<<<<<< total = 1
<<<<<< current = 0
<<<<<< Contents:
<<<<<< service = 'basic-connect' (a289cc33-bcbb-8b4f-b6b0-133ec2aae6df)
<<<<<< cid = 'register-state' (0x00000009)
<<<<<< type = 'set' (0x00000001)
<<<<<< Fields:
<<<<<< ProviderId = '22610'
<<<<<< RegisterAction = 'manual'
<<<<<< DataClass = '(null)'
[/dev/cdc-wdm0] Received message...
>>>>>> RAW:
>>>>>> length = 112
>>>>>> data = 07:00:00:80:70:00:00:00:00:00:00:00:01:00:00:00:00:00:00:00:3D:01:DC:C5:FE:F5:4D:05:0D:3A:BE:F7:05:8E:9A:AF:04:00:00:00:44:00:00:00:01:00:00:00:01:00:00:00:28:00:00:00:1A:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:74:00:65:00:6C:00:65:00:6E:00:6F:00:72:00:2E:00:73:00:6D:00:61:00:72:00:74:00:00:00
[/dev/cdc-wdm0] Received message (translated)...
>>>>>> Header:
>>>>>> length = 112
>>>>>> type = indicate-status (0x80000007)
>>>>>> transaction = 0
>>>>>> Fragment header:
>>>>>> total = 1
>>>>>> current = 0
>>>>>> Contents:
>>>>>> service = 'ms-basic-connect-extensions' (3d01dcc5-fef5-4d05-0d3a-bef7058e9aaf)
>>>>>> cid = 'lte-attach-status' (0x00000004)
>>>>>> Fields:
>>>>>> LteAttachStatus = {
>>>>>> LteAttachState = '1'
>>>>>> IpType = '1'
>>>>>> AccessString = 'telenor.smart'
>>>>>> UserName = '(null)'
>>>>>> Password = '(null)'
>>>>>> Compression = '0'
>>>>>> AuthProtocol = '0'
>>>>>> }
<debug> Received notification (service 'ms-basic-connect-extensions', command 'lte-attach-status')
[/dev/cdc-wdm0] Received message...
>>>>>> RAW:
>>>>>> length = 120
>>>>>> data = 03:00:00:80:78:00:00:00:1B:00:00:00:01:00:00:00:00:00:00:00:A2:89:CC:33:BC:BB:8B:4F:B6:B0:13:3E:C2:AA:E6:DF:09:00:00:00:00:00:00:00:48:00:00:00:00:00:00:00:04:00:00:00:02:00:00:00:20:00:00:00:01:00:00:00:30:00:00:00:0A:00:00:00:3C:00:00:00:0C:00:00:00:00:00:00:00:00:00:00:00:02:00:00:00:32:00:32:00:36:00:31:00:30:00:00:00:6F:00:72:00:61:00:6E:00:67:00:65:00
[/dev/cdc-wdm0] Received message (translated)...
>>>>>> Header:
>>>>>> length = 120
>>>>>> type = command-done (0x80000003)
>>>>>> transaction = 27
>>>>>> Fragment header:
>>>>>> total = 1
>>>>>> current = 0
>>>>>> Contents:
>>>>>> status error = 'None' (0x00000000)
>>>>>> service = 'basic-connect' (a289cc33-bcbb-8b4f-b6b0-133ec2aae6df)
>>>>>> cid = 'register-state' (0x00000009)
>>>>>> Fields:
>>>>>> NwError = 'unknown'
>>>>>> RegisterState = 'roaming'
>>>>>> RegisterMode = 'manual'
>>>>>> AvailableDataClasses = 'lte'
>>>>>> CurrentCellularClass = 'gsm'
>>>>>> ProviderId = '22610'
>>>>>> ProviderName = 'orange'
>>>>>> RoamingText = '(null)'
>>>>>> RegistrationFlag = 'packet-service-automatic-attach'
<debug> Running registration checks (CS: 'yes', PS: 'yes', EPS: 'yes')
[/dev/cdc-wdm0] Sent message...
<<<<<< RAW:
<<<<<< length = 48
<<<<<< data = 03:00:00:00:30:00:00:00:1C:00:00:00:01:00:00:00:00:00:00:00:A2:89:CC:33:BC:BB:8B:4F:B6:B0:13:3E:C2:AA:E6:DF:09:00:00:00:00:00:00:00:00:00:00:00
[/dev/cdc-wdm0] Sent message (translated)...
<<<<<< Header:
<<<<<< length = 48
<<<<<< type = command (0x00000003)
<<<<<< transaction = 28
<<<<<< Fragment header:
<<<<<< total = 1
<<<<<< current = 0
<<<<<< Contents:
<<<<<< service = 'basic-connect' (a289cc33-bcbb-8b4f-b6b0-133ec2aae6df)
<<<<<< cid = 'register-state' (0x00000009)
<<<<<< type = 'query' (0x00000000)
[/dev/cdc-wdm0] Received message...
>>>>>> RAW:
>>>>>> length = 116
>>>>>> data = 07:00:00:80:74:00:00:00:00:00:00:00:01:00:00:00:00:00:00:00:A2:89:CC:33:BC:BB:8B:4F:B6:B0:13:3E:C2:AA:E6:DF:09:00:00:00:48:00:00:00:00:00:00:00:04:00:00:00:02:00:00:00:20:00:00:00:01:00:00:00:30:00:00:00:0A:00:00:00:3C:00:00:00:0C:00:00:00:00:00:00:00:00:00:00:00:02:00:00:00:32:00:32:00:36:00:31:00:30:00:00:00:6F:00:72:00:61:00:6E:00:67:00:65:00
[/dev/cdc-wdm0] Received message (translated)...
>>>>>> Header:
>>>>>> length = 116
>>>>>> type = indicate-status (0x80000007)
>>>>>> transaction = 0
>>>>>> Fragment header:
>>>>>> total = 1
>>>>>> current = 0
>>>>>> Contents:
>>>>>> service = 'basic-connect' (a289cc33-bcbb-8b4f-b6b0-133ec2aae6df)
>>>>>> cid = 'register-state' (0x00000009)
>>>>>> Fields:
>>>>>> NwError = 'unknown'
>>>>>> RegisterState = 'roaming'
>>>>>> RegisterMode = 'manual'
>>>>>> AvailableDataClasses = 'lte'
>>>>>> CurrentCellularClass = 'gsm'
>>>>>> ProviderId = '22610'
>>>>>> ProviderName = 'orange'
>>>>>> RoamingText = '(null)'
>>>>>> RegistrationFlag = 'packet-service-automatic-attach'
<debug> Received notification (service 'basic-connect', command 'register-state')
[/dev/cdc-wdm0] Received message...
>>>>>> RAW:
>>>>>> length = 72
>>>>>> data = 07:00:00:80:48:00:00:00:00:00:00:00:01:00:00:00:00:00:00:00:A2:89:CC:33:BC:BB:8B:4F:B6:B0:13:3E:C2:AA:E6:DF:0A:00:00:00:1C:00:00:00:00:00:00:00:02:00:00:00:20:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
[/dev/cdc-wdm0] Received message (translated)...
>>>>>> Header:
>>>>>> length = 72
>>>>>> type = indicate-status (0x80000007)
>>>>>> transaction = 0
>>>>>> Fragment header:
>>>>>> total = 1
>>>>>> current = 0
>>>>>> Contents:
>>>>>> service = 'basic-connect' (a289cc33-bcbb-8b4f-b6b0-133ec2aae6df)
>>>>>> cid = 'packet-service' (0x0000000a)
>>>>>> Fields:
>>>>>> NwError = '0'
>>>>>> PacketServiceState = 'attached'
>>>>>> HighestAvailableDataClass = 'lte'
>>>>>> UplinkSpeed = '0'
>>>>>> DownlinkSpeed = '0'
<debug> Received notification (service 'basic-connect', command 'packet-service')
<debug> Packet service state: 'attached', data class: 'lte'
[/dev/cdc-wdm0] Received message...
>>>>>> RAW:
>>>>>> length = 120
>>>>>> data = 03:00:00:80:78:00:00:00:1C:00:00:00:01:00:00:00:00:00:00:00:A2:89:CC:33:BC:BB:8B:4F:B6:B0:13:3E:C2:AA:E6:DF:09:00:00:00:00:00:00:00:48:00:00:00:00:00:00:00:04:00:00:00:02:00:00:00:20:00:00:00:01:00:00:00:30:00:00:00:0A:00:00:00:3C:00:00:00:0C:00:00:00:00:00:00:00:00:00:00:00:02:00:00:00:32:00:32:00:36:00:31:00:30:00:00:00:6F:00:72:00:61:00:6E:00:67:00:65:00
[/dev/cdc-wdm0] Received message (translated)...
>>>>>> Header:
>>>>>> length = 120
>>>>>> type = command-done (0x80000003)
>>>>>> transaction = 28
>>>>>> Fragment header:
>>>>>> total = 1
>>>>>> current = 0
>>>>>> Contents:
>>>>>> status error = 'None' (0x00000000)
>>>>>> service = 'basic-connect' (a289cc33-bcbb-8b4f-b6b0-133ec2aae6df)
>>>>>> cid = 'register-state' (0x00000009)
>>>>>> Fields:
>>>>>> NwError = 'unknown'
>>>>>> RegisterState = 'roaming'
>>>>>> RegisterMode = 'manual'
>>>>>> AvailableDataClasses = 'lte'
>>>>>> CurrentCellularClass = 'gsm'
>>>>>> ProviderId = '22610'
>>>>>> ProviderName = 'orange'
>>>>>> RoamingText = '(null)'
>>>>>> RegistrationFlag = 'packet-service-automatic-attach'
<debug> Periodic signal check refresh ignored: checks not enabled
<debug> Modem is currently registered in a 3GPP network