broadband-modem-mbim: request operator reload explicitly

If the modem switches from one roaming operator to a different roaming
operator, the actual operator MCCMNC/description will change even if
the registration state keeps on being the same (roaming). Detect that,
and trigger operator info reloading explicitly.

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/154